--- a/templates/default/sv-nginx-log-run.erb
+++ b/templates/default/sv-nginx-log-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh
 exec <%= node['runit']['svlogd_bin'] %> \
-  -tt <% node['hdeploy-server']['nginx']['log_directory']  %>
+  -tt <%= node['hdeploy-server']['nginx']['log_directory']  %>
